--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
+    "react-apexcharts": "^1.9.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
@@ -67,6 +68,7 @@
     "react-markdown": "^9.0.0",
     "react-organizational-chart": "^2.2.1",
     "react-pdf": "^9.1.0",
+    "react-quill": "^2.0.0",
     "react-slick": "^0.29.0",
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
