--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@mui/x-data-grid": "^6.16.1",
     "@mui/x-date-pickers": "^6.16.1",
     "@react-pdf/renderer": "^4.3.1",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@smakss/react-scroll-direction": "^4.2.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.5.1",
@@ -57,8 +59,9 @@
     "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
+    "react": "18.2.0",
     "react-apexcharts": "^1.9.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "react-i18next": "^13.2.2",
@@ -78,6 +81,7 @@
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^2.2.4",
+    "three": "^0.182.0",
     "yet-another-react-lightbox": "^3.13.0",
     "yup": "^1.3.2"
   },
