--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@types/react-lazy-load-image-component": "^1.6.1",
     "@types/react-slick": "^0.23.10",
     "@types/stylis": "^4.2.1",
+    "mui-color-input": "^4.0.2",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   }
